fixed home page image overlapping issue

--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ h2.fw-bold {
     object-position: center center;
     transform: scale(1.1);
     border-radius: 50%;
-    display: block;
+    display: inline-block;
     margin-left: auto;
     margin-right: auto;
     max-width: 420px;
@@ -221,7 +221,8 @@ h2.fw-bold {
 }
 
 .hero-section {
-    padding-top: 90px; /* space for fixed navbar */
+    padding-top: 120px; /* space for fixed navbar */
+    padding-bottom: 100px;
 }
 
 /* Project Badge */
